# comfyui-Align

./: README.md  __init__.py  color_presets.json  pyproject.toml
server/: __init__.py  color_presets_api.py  web_assets.py
web/align/: App-W9g1XVcG.js  colorBar-Ckim_oH9.js  defaultColors-rOFAjVhq.js  dispatch-DJ7ccJgh.js  groups-xoLWjEXo.js  main-DM5CSivz.css  main.js  vendor-Bzgz95E1.js
